--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
   "homepage": "https://github.com/ShadowOnYOU/AI_travel_Planner#readme",
   "dependencies": {
     "@supabase/supabase-js": "^2.75.0",
-    "@types/node": "^24.7.2",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "next": "^15.5.5",
-    "react": "^19.2.0",
+    "@types/node": "^20.8.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "crypto-js": "^4.2.0",
+    "next": "^13.5.0",
+    "react": "^18.2.0",
     "react-dom": "^19.2.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
+    "@types/crypto-js": "^4.2.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.37.0",
     "eslint-config-next": "^15.5.5",
