--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,8 @@ NEXT_PUBLIC_BAILIAN_API_KEY=your_bailian_api_key_here
 NEXT_PUBLIC_BAILIAN_BASE_URL=https://dashscope.aliyuncs.com/api/v1
 NEXT_PUBLIC_BAILIAN_MODEL_ID=qwen-turbo
 
+# 高德地图 API 配置
+NEXT_PUBLIC_AMAP_API_KEY=your_amap_api_key_here
+
 # 开发环境配置
 NODE_ENV=development
