--- a/.env.local.example
+++ b/.env.local.example
@@ -15,4 +15,7 @@ NEXT_PUBLIC_IFLYTEK_APP_ID=your_iflytek_app_id_here
 NEXT_PUBLIC_IFLYTEK_API_KEY=your_iflytek_api_key_here
 NEXT_PUBLIC_IFLYTEK_API_SECRET=your_iflytek_api_secret_here
 
+# 高德地图 API 配置
+NEXT_PUBLIC_AMAP_API_KEY=your_amap_api_key_here
+
 # Add other env vars as needed
