--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/ShadowOnYOU/AI_travel_Planner#readme",
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@supabase/supabase-js": "^2.75.0",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
@@ -28,7 +29,7 @@
     "crypto-js": "^4.2.0",
     "next": "^13.5.0",
     "react": "^18.2.0",
-  "react-dom": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.9.3",
     "ws": "^8.18.3"
   },
