feat: 修复UI可见性问题并完善地图路线功能
- 修复登录/注册页面文本在白色背景下不可见的问题
- 修复计划页面表单输入框文字显示问题
- 使用内联样式强制设置输入框文字为深色
- 移除全局CSS中的强制暗色模式样式
- 完善地图路线可视化功能
- 添加AI路线规划服务
- 优化用户界面体验

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,12 +2,8 @@ version: '3.8'
 
 services:
   ai-travel-planner:
-    # 使用预构建镜像（推荐）或本地构建
-    image: ${DOCKER_IMAGE:-ghcr.io/shadowonyou/ai-travel-planner:latest}
-    # 如果镜像不存在，回退到本地构建
-    build:
-      context: .
-      dockerfile: Dockerfile
+    # 使用GitHub Container Registry预构建镜像
+    image: ghcr.io/shadowonyou/ai-travel-planner:latest
     container_name: ai-travel-planner
     ports:
       - "3000:3000"
